--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "tasktracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alextesting.ninja/taskTracker",
+  "homepage": "https://lavalleeale.github.io/taskTracker/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "gh-pages": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
@@ -17,11 +18,12 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "rsync -adh build/ root@web.local:/var/www/api/taskTracker/public"
   },
   "eslintConfig": {
     "extends": [
